# dotvault

./: .gitignore  .vault.keys.AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  install.sh  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  release.yml
scripts/: bump.sh  install.sh  lib.sh  quality-gate.sh  upgrade.sh
skill/: SKILL.md
src/: access.rs  backup.rs  commands.rs  config.rs  crypto.rs  envfmt.rs  export_render.rs  lib.rs  main.rs  skill.rs  update.rs  util.rs  vault.rs
tests/: concurrency.rs  export_merge.rs  vault_flow.rs  version_test.rs
tests/common/: mod.rs
