[package]
name = "dotvault"
version = "0.4.0"
edition = "2021"
description = "SSH-key encrypted, multi-recipient secret vault with .env export"
license = "MIT"

[lib]
name = "dotvault"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
ssh-key = { version = "0.6", features = ["ed25519", "encryption", "alloc"] }
age = { version = "0.11", features = ["ssh"] }
rand = "0.8"
rpassword = "7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
ssh-key = { version = "0.6", features = ["ed25519", "encryption", "alloc"] }
